--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>
 		Black Clover OPs
 	</title>
-	<link rel="stylesheet" type="text/css" href="black style.css">
+	<link rel="stylesheet" type="text/css" href="black style.css"/>
 </head>
 <body>
 	
